--- a/templates/base.html
+++ b/templates/base.html
@@ -22,7 +22,7 @@
   <link href="https://fonts.googleapis.com/css?family=Lato:100,100i,300,300i,400,400i,700,700i,900,900i" rel="stylesheet">
 
   <!-- Custom styles for this template -->
-  <link href="{% static "css/one-page-wonder-2.css" %}" rel="stylesheet">
+  <link href="{% static "css/one-page-wonder.css" %}" rel="stylesheet">
 
 
 </head>
